--- a/rejestracja_formularz/index.html
+++ b/rejestracja_formularz/index.html
@@ -330,6 +330,7 @@ document.getElementById('register-form').addEventListener('submit', async e => {
   name: document.getElementById('imie').value,
   nazwisko: document.getElementById('nazwisko').value,
     telefon: document.getElementById('telefon').value,
+    email: document.getElementById('email').value,
     nrE: document.getElementById('nrE').value,
     nrEPomiary: document.getElementById('nrEPomiary').value,
     nrD: document.getElementById('nrD').value
