--- a/rejestracja_formularz/index.html
+++ b/rejestracja_formularz/index.html
@@ -333,6 +333,7 @@ document.getElementById('register-form').addEventListener('submit', async e => {
     email: document.getElementById('email').value,
     nrE: document.getElementById('nrE').value,
     nrEPomiary: document.getElementById('nrEPomiary').value,
+    status: document.getElementById('status').value,
     nrD: document.getElementById('nrD').value
   
     })
