--- a/rejestracja_formularz/index.html
+++ b/rejestracja_formularz/index.html
@@ -332,8 +332,7 @@ document.getElementById('register-form').addEventListener('submit', async e => {
     telefon: document.getElementById('telefon').value,
     email: document.getElementById('email').value,
     nrE: document.getElementById('nrE').value,
-    nrEPomiary: document.getElementById('nrEPomiary').value,
-    status: document.getElementById('status').value,
+    nrEPomiary: document.getElementById('nrEPomiary').
     nrD: document.getElementById('nrD').value
   
     })
