--- a/rejestracja_formularz/index.html
+++ b/rejestracja_formularz/index.html
@@ -406,6 +406,32 @@ document.getElementById('register-form').addEventListener('submit', async e => {
 
   window.location.href = 'https://orep.pl/logowanie'
 })
+  <script type="module">
+/* === BLOKADA EMAILA I TELEFONU W INNYCH POLACH === */
+
+const emailRegex = /[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-z]{2,}/i
+const phoneRegex = /\+?\d[\d\s\-]{2,}/
+
+const forbiddenInputs = [
+  
+  'zajmujeSie'
+]
+
+forbiddenInputs.forEach(id => {
+  const el = document.getElementById(id)
+  if (!el) return
+
+  el.addEventListener('input', () => {
+    if (emailRegex.test(el.value) || phoneRegex.test(el.value)) {
+      el.value = el.value
+        .replace(emailRegex, '')
+        .replace(phoneRegex, '')
+      alert('Numer telefonu i adres e-mail można podać tylko w przeznaczonych do tego polach.')
+    }
+  })
+})
+</script>
+
 </script>
 </body>
 </html>
