--- a/profil/index.html
+++ b/profil/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-<meta name="robots" content="noindex, nofollow" 
+<meta name="robots" content="noindex, nofollow">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Profil Elektryka</title>
@@ -33,7 +33,8 @@ header p {
   opacity:0.9;
   color: #f4f4f5;
 }
-  /* PRZYCISK UDOSTEPNIJ */
+
+/* PRZYCISK UDOSTEPNIJ */
 .share-btn {
   background-color: #0B5FA5;
   color: #fff;
@@ -120,15 +121,14 @@ section {
   <span id="status" class="badge"></span>
   <p id="opis"></p>
 
-  <!-- DODANE: EMAIL + TELEFON -->
   <p><strong>Email:</strong> <span id="email"></span></p>
   <p><strong>Telefon:</strong> <span id="telefon"></span></p>
-  <p>
-  <button type="button" id="shareProfileBtn" class="share-btn">
-    🔗 Udostępnij profil
-  </button>
-</p>
 
+  <p>
+    <button type="button" id="shareProfileBtn" class="share-btn">
+      🔗 Udostępnij profil
+    </button>
+  </p>
 </section>
 
 <section id="brak" class="hidden">
@@ -155,7 +155,6 @@ const statusMap = {
   "❌": { text: "Status ELEKTRYKA - aktualnie brak weryfikacji 😕", class: "status-no" }
 };
 
-/* === DODANE FUNKCJE MASKUJĄCE === */
 function maskEmail(email) {
   if (!email) return "";
   const [name, domain] = email.split("@");
@@ -168,7 +167,6 @@ function maskPhone(phone) {
   return phone.slice(0, 2) + "******" + phone.slice(-2);
 }
 
-// ID z URL
 const urlParams = new URLSearchParams(window.location.search);
 const id = urlParams.get('id');
 
@@ -187,8 +185,6 @@ if (id) {
     } else {
       document.getElementById("heroName").textContent = `${data.imie} ${data.nazwisko}`;
       document.getElementById("opis").textContent = data.zajmujeSie || "Usługi elektryczne";
-
-      // ⭐ GWIAZDKI JAKO TEKST
       gwiazdkiLine.textContent = data.gwiazdki || "";
 
       statusEl.className = "badge";
@@ -199,7 +195,6 @@ if (id) {
         statusEl.textContent = "";
       }
 
-      // === DODANA LOGIKA show_contact ===
       const emailEl = document.getElementById("email");
       const telEl = document.getElementById("telefon");
 
@@ -213,36 +208,33 @@ if (id) {
 
       profil.classList.remove("hidden");
       brak.classList.add("hidden");
+
+      // 🔗 EVENT UDOSTĘPNIANIA
+      const shareBtn = document.getElementById("shareProfileBtn");
+      shareBtn.addEventListener("click", async () => {
+        const profileUrl = window.location.href;
+        const profileText = `Sprawdź profil elektryka ${document.getElementById('heroName').textContent}`;
+        if (navigator.share) {
+          try {
+            await navigator.share({
+              title: 'Profil Elektryka',
+              text: profileText,
+              url: profileUrl
+            });
+            console.log('Profil udostępniony!');
+          } catch (err) {
+            console.error('Błąd udostępniania:', err);
+          }
+        } else {
+          await navigator.clipboard.writeText(profileUrl);
+          alert('Adres profilu został skopiowany do schowka. Możesz go udostępnić ręcznie.');
+        }
+      });
     }
   };
 
   loadProfile();
 }
-  const shareBtn = document.getElementById("shareProfileBtn");
-
-shareBtn.addEventListener("click", async () => {
-  const profileUrl = window.location.href; // aktualny adres profilu
-  const profileText = `Sprawdź profil elektryka ${document.getElementById('heroName').textContent}`;
-
-  if (navigator.share) {
-    // 🌐 Jeśli przeglądarka obsługuje Web Share API (mobilne urządzenia)
-    try {
-      await navigator.share({
-        title: 'Profil Elektryka',
-        text: profileText,
-        url: profileUrl
-      });
-      console.log('Profil udostępniony!');
-    } catch (err) {
-      console.error('Błąd udostępniania:', err);
-    }
-  } else {
-    // 🖥 Desktop – kopiowanie do schowka jako fallback
-    await navigator.clipboard.writeText(profileUrl);
-    alert('Adres profilu został skopiowany do schowka. Możesz go udostępnić ręcznie.');
-  }
-});
-
 </script>
 
 </body>
