--- a/profil/index.html
+++ b/profil/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
+  <meta property="og:title" content="Profil Elektryka">
+<meta property="og:description" content="Sprawdź profil elektryka Jan Kowalski">
+<meta property="og:image" content="https://twojastrona.pl/obrazek_profilu.png">
+<meta property="og:url" content="https://twojastrona.pl/profil?id=123">
+
 <meta name="robots" content="noindex, nofollow">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
