--- a/profil/index.html
+++ b/profil/index.html
@@ -4,7 +4,7 @@
   <meta property="og:title" content="Profil Elektryka">
 <meta property="og:description" content="Sprawdź profil elektryka Jan Kowalski">
 <meta property="og:image" content="https://twojastrona.pl/obrazek_profilu.png">
-<meta property="og:url" content="https://twojastrona.pl/profil?id=123">
+<meta property="og:url" content="https://orep.pl/profil">
 
 <meta name="robots" content="noindex, nofollow">
 <meta charset="UTF-8">
