--- a/profil/index.html
+++ b/profil/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta property="og:title" content="Profil Elektryka">
 <meta property="og:description" content="Sprawdź profil elektryka Jan Kowalski">
-<meta property="og:image" content="https://orep.pl/logo.png">
+<meta property="og:image" content="https://orep.pl/logo1.png">
 <meta property="og:url" content="https://orep.pl/profil">
 
 <meta name="robots" content="noindex, nofollow">
