--- a/profil/index.html
+++ b/profil/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-  <meta property="og:title" content="Profil Elektryka">
-<meta property="og:description" content="Sprawdź profil elektryka Jan Kowalski">
+
+<meta property="og:title" content="Profil Elektryka">
+<meta property="og:description" content="Sprawdź profil elektryka w Ogólnopolskim Rejestrze Elektryków">
 <meta property="og:image" content="https://orep.pl/logo1.png">
 <meta property="og:url" content="https://orep.pl/profil">
+<meta property="og:type" content="website">
 
 <meta name="robots" content="noindex, nofollow">
 <meta charset="UTF-8">
