--- a/profil/index.html
+++ b/profil/index.html
@@ -227,24 +227,19 @@ const shareBtn = document.getElementById("shareProfileBtn");
 shareBtn.addEventListener("click", async () => {
   const heroName = document.getElementById('heroName').textContent;
   const profileUrl = window.location.href;
-  const profileText = `Profil elektryka ${heroName}`;
 
   if (navigator.share) {
-    try {
-      await navigator.share({
-        title: 'Profil Elektryka',
-        text: profileText,
-        url: profileUrl
-      });
-      console.log('Profil udostępniony!');
-    } catch (err) {
-      console.error('Błąd udostępniania:', err);
-    }
+    await navigator.share({
+      title: 'Profil Elektryka',
+      text: `Profil elektryka ${heroName}`,
+      url: profileUrl
+    });
   } else {
     await navigator.clipboard.writeText(profileUrl);
-    alert('Adres profilu został skopiowany do schowka. Możesz go udostępnić ręcznie.');
+    alert('Adres profilu został skopiowany do schowka.');
   }
 });
+
 </script>
 
 </body>
