--- a/profil/index.html
+++ b/profil/index.html
@@ -5,7 +5,7 @@
 <meta property="og:title" content="Profil Elektryka">
 <meta property="og:description" content="Sprawdź profil elektryka w Ogólnopolskim Rejestrze Elektryków">
 <meta property="og:image" content="https://orep.pl/logo1.png">
-<meta property="og:url" content="https://orep.pl/profil">
+<meta property="og:url" content="https://orep.pl/profil?id=123">
 <meta property="og:type" content="website">
 
 <meta name="robots" content="noindex, nofollow">
