--- a/profil/index.html
+++ b/profil/index.html
@@ -2,10 +2,9 @@
 <html lang="pl">
 <head>
 
-<meta property="og:title" content="Profil Elektryka">
+<meta property="og:title" content="Ogólnopolski rejestr elektryków w polsce">
 <meta property="og:description" content="Sprawdź profil elektryka w Ogólnopolskim Rejestrze Elektryków">
 <meta property="og:image" content="https://orep.pl/logo1.png">
-<meta property="og:url" content="https://orep.pl/profil?id=123">
 <meta property="og:type" content="website">
 
 <meta name="robots" content="noindex, nofollow">
