--- a/profil/index.html
+++ b/profil/index.html
@@ -4,9 +4,9 @@
 
 <meta property="og:title" content="Ogólnopolski rejestr elektryków w polsce">
 <meta property="og:description" content="Sprawdź profil elektryka w Ogólnopolskim Rejestrze Elektryków">
-<meta property="og:image" content="https://orep.pl/logo1.png">
+<meta property="og:image" content="https://orep.pl/oreppl.jpg">
 <meta property="og:type" content="website">
-
+<meta property="og:url" content="https://orep.pl/profil?id=123">
 <meta name="robots" content="noindex, nofollow">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
