--- a/profil/index.html
+++ b/profil/index.html
@@ -129,6 +129,7 @@ section {
 
   <p><strong>Email:</strong> <span id="email"></span></p>
   <p><strong>Telefon:</strong> <span id="telefon"></span></p>
+  <p><strong>Zajmuje się:</strong> <span id="displayZajmujeSie"></span></p>
 
   <p>
     <button type="button" id="shareProfileBtn" class="share-btn">
@@ -136,6 +137,7 @@ section {
     </button>
   </p>
 </section>
+
 
 <section id="brak" class="hidden">
   <h2>Brak wyników</h2>
