--- a/rejestracja_formularz/index.html
+++ b/rejestracja_formularz/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Rejestracja – Ogólnopolski Rejestr Elektryków</title>
   <link rel="icon" href="/favicon.png">
   <meta name="robots" content="noindex, nofollow">
@@ -10,36 +10,134 @@
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
   <style>
-    body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background-color:#f4f6f8; display:flex; justify-content:center; padding:10px; margin:0; }
-    .form-wrapper { width:100%; max-width:600px; padding:0 10px; box-sizing:border-box; }
-    form { position:relative; background:#fff; padding:20px 25px; border-radius:10px; box-shadow:0 4px 12px rgba(0,0,0,0.1); box-sizing:border-box; }
-    h2 { text-align:center; margin-bottom:20px; font-size:22px; }
-    label { margin-top:15px; display:block; font-weight:600; font-size:14px; }
-    input, textarea, select { width:100%; padding:10px; border-radius:6px; border:1px solid #ccc; font-size:16px; box-sizing:border-box; background-color:#fff; color:#000; }
-    input[readonly] { background-color:#f4f6f8; cursor:not-allowed; }
-    select:disabled { background-color:#f4f6f8; color:#555; cursor:not-allowed; }
-    select:not(:disabled) { background-color:#fff; color:#000; }
-    select { height:42px; }
-    textarea { min-height:80px; }
-    button[type="submit"] { margin-top:20px; width:100%; padding:12px; background:#4CAF50; color:#fff; border:none; border-radius:6px; font-size:16px; cursor:pointer; }
-    button[type="submit"]:hover { background:#45a049; }
-    #close-btn { position:absolute; top:12px; right:12px; background:transparent; border:none; font-size:26px; font-weight:bold; cursor:pointer; color:#666; line-height:1; }
-    #close-btn:hover { color:#000; }
-    #result { margin-top:15px; padding:10px; text-align:center; font-weight:bold; }
-    .error { background:#f44336; color:#fff; }
-    #loading { display:none; text-align:center; margin-top:10px; font-weight:bold; }
-    .rodo-label { display:flex; flex-direction:row; flex-wrap:wrap; align-items:flex-start; margin-top:15px; font-weight:normal; font-size:14px; gap:10px; }
-    .rodo-label input[type="checkbox"] { margin-top:2px; accent-color:orange; }
-    #toolbar { margin-bottom:5px; display:flex; gap:5px; }
-    #toolbar button { padding:4px 8px; font-size:14px; cursor:pointer; }
-    #zajmujeSie { min-height:80px; border:1px solid #ccc; border-radius:6px; padding:10px; background:#fff; font-size:16px; overflow-y:auto; }
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f4f6f8;
+      display: flex;
+      justify-content: center;
+      padding: 10px;
+      margin: 0;
+    }
+
+    .form-wrapper {
+      width: 100%;
+      max-width: 600px;
+      padding: 0 10px;
+      box-sizing: border-box;
+    }
+
+    form {
+      position: relative;
+      background-color: #fff;
+      padding: 20px 25px;
+      border-radius: 10px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      box-sizing: border-box;
+    }
+
+    h2 { text-align: center; margin-bottom: 20px; font-size: 22px; }
+
+    label {
+      margin-top: 15px;
+      display: block;
+      font-weight: 600;
+      font-size: 14px;
+    }
+
+    input, textarea, select {
+      width: 100%;
+      padding: 10px;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+      font-size: 16px;
+      box-sizing: border-box;
+      background-color: #fff;
+      color: #000;
+    }
+
+    input[readonly] { background-color: #f4f6f8; cursor: not-allowed; }
+    select:disabled { background-color: #f4f6f8; color: #555; cursor: not-allowed; }
+    select:not(:disabled) { background-color: #fff; color: #000; }
+    select { height: 42px; }
+    textarea { min-height: 80px; }
+
+    button[type="submit"] {
+      margin-top: 20px;
+      width: 100%;
+      padding: 12px;
+      background: #4CAF50;
+      color: #fff;
+      border: none;
+      border-radius: 6px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+    button[type="submit"]:hover { background: #45a049; }
+
+    #close-btn {
+      position: absolute;
+      top: 12px;
+      right: 12px;
+      background: transparent;
+      border: none;
+      font-size: 26px;
+      font-weight: bold;
+      cursor: pointer;
+      color: #666;
+      line-height: 1;
+    }
+    #close-btn:hover { color: #000; }
+
+    #result { margin-top: 15px; padding: 10px; text-align: center; font-weight: bold; }
+    .error { background: #f44336; color: #fff; }
+    #loading { display: none; text-align: center; margin-top: 10px; font-weight: bold; }
+
+    .rodo-label {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      align-items: flex-start;
+      margin-top: 15px;
+      font-weight: normal;
+      font-size: 14px;
+      gap: 10px;
+    }
+    .rodo-label input[type="checkbox"] { margin-top: 2px; accent-color: orange; }
+
+    #zajmujeSie {
+      min-height: 80px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      padding: 10px;
+      background-color: #fff;
+      font-size: 16px;
+      overflow-y: auto;
+      white-space: pre-wrap;
+    }
+
+    /* toolbar */
+    #toolbar {
+      display: flex;
+      gap: 5px;
+      margin-bottom: 5px;
+    }
+    #toolbar button {
+      padding: 5px 10px;
+      font-size: 14px;
+      cursor: pointer;
+      border-radius: 4px;
+      border: 1px solid #ccc;
+      background: #f0f0f0;
+    }
+    #toolbar button:hover { background: #ddd; }
   </style>
 </head>
-
 <body>
 <div class="form-wrapper">
 <form id="register-form">
+
   <button type="button" id="close-btn" aria-label="Zamknij formularz">❌</button>
+
   <h2 id="form-title">Rejestracja</h2>
 
   <label>Imię</label>
@@ -93,7 +191,7 @@
 
   <label class="rodo-label">
     <input type="checkbox" id="rodo" required>
-    Wyrażam zgodę na przetwarzanie moich danych osobowych w celu publikacji w Ogólnopolskim Rejestrze Elektryków zgodnie z Regulaminem Platformy. Oświadczam, że dane są prawdziwe i ponoszę za nie odpowiedzialność.
+    Wyrażam zgodę na przetwarzanie moich danych osobowych w celu publikacji w Ogólnopolskim Rejestrze Elektryków zgodnie z Regulaminem Platformy.
   </label>
 
   <button type="submit" id="submit-btn">Zarejestruj</button>
@@ -111,72 +209,91 @@ const supabase = createClient(
   'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY2OTE4NzcsImV4cCI6MjA4MjI2Nzg3N30.PhuNnwzQ8cZW_UyUjCxXaYAj7xCCiTnOJVd4fUtQRD8'
 )
 
-let currentUser = null;
-const fields = ['imie','nazwisko','miasto','wojewodztwo','nrE','nrEPomiary','nrD','telefon','zajmujeSie'];
+let currentUser = null
+const fields = ['imie','nazwisko','miasto','wojewodztwo','nrE','nrEPomiary','nrD','telefon','zajmujeSie']
 
-function bindValidity(inputId,labelId,dateId){
-  const input = document.getElementById(inputId)
-  const label = document.getElementById(labelId)
-  const date = document.getElementById(dateId)
-  date.min = new Date().toISOString().split('T')[0]
-  input.addEventListener('input',()=>{ 
-    if(input.value.trim()!==''){ label.style.display='block'; date.style.display='block'; date.required=true; }
-    else { label.style.display='none'; date.style.display='none'; date.required=false; date.value=''; }
+// formatowanie tekstu
+function formatText(command) {
+  const zajmujeSie = document.getElementById('zajmujeSie');
+  zajmujeSie.focus();
+  document.execCommand(command, false, null);
+}
+
+function addLink() {
+  const zajmujeSie = document.getElementById('zajmujeSie');
+  zajmujeSie.focus();
+  const url = prompt("Wklej adres URL:");
+  if (!url) return;
+  const selection = window.getSelection();
+  if (!selection.rangeCount) return;
+  const range = selection.getRangeAt(0);
+  const selectedText = range.toString() || url;
+  const a = document.createElement('a');
+  a.href = url;
+  a.textContent = selectedText;
+  a.target = "_blank";
+  range.deleteContents();
+  range.insertNode(a);
+}
+
+// --- Ładowanie województw ---
+async function loadWojewodztwa(selectedWoj = null) {
+  const { data, error } = await supabase.from('wojewodztwa').select('id, nazwa').order('nazwa')
+  if (error) return
+  const wojSelect = document.getElementById('wojewodztwo')
+  wojSelect.innerHTML = '<option value="">— wybierz województwo —</option>'
+  data.forEach(w => {
+    const o = document.createElement('option')
+    o.value = w.id
+    o.textContent = w.nazwa
+    wojSelect.appendChild(o)
   })
-}
-bindValidity('nrE','nrEValidLabel','nrEValidTo')
-bindValidity('nrEPomiary','nrEPomiaryValidLabel','nrEPomiaryValidTo')
-bindValidity('nrD','nrDValidLabel','nrDValidTo')
-
-async function loadWojewodztwa(selectedWoj=null){
-  const { data,error } = await supabase.from('wojewodztwa').select('id,nazwa').order('nazwa')
-  if(error) return
-  const wojSelect=document.getElementById('wojewodztwo')
-  wojSelect.innerHTML='<option value="">— wybierz województwo —</option>'
-  data.forEach(w=>{ const o=document.createElement('option'); o.value=w.id; o.textContent=w.nazwa; wojSelect.appendChild(o) })
-  if(selectedWoj){ wojSelect.value=selectedWoj; wojSelect.dispatchEvent(new Event('change')) }
+  if (selectedWoj) { wojSelect.value = selectedWoj; wojSelect.dispatchEvent(new Event('change')) }
 }
 
-document.getElementById('wojewodztwo').addEventListener('change', async function(){
-  const wojId=this.value
-  const miastoSelect=document.getElementById('miasto')
-  if(!wojId){ miastoSelect.innerHTML='<option value="">— wybierz miasto —</option>'; miastoSelect.disabled=true; return }
-  const { data,error } = await supabase.from('miasta').select('id,nazwa').eq('wojewodztwo_id',wojId).order('nazwa')
-  if(error) return
-  miastoSelect.innerHTML='<option value="">— wybierz miasto —</option>'
-  data.forEach(m=>{ const o=document.createElement('option'); o.value=m.id; o.textContent=m.nazwa; miastoSelect.appendChild(o) })
-  miastoSelect.disabled=false
+document.getElementById('wojewodztwo').addEventListener('change', async function() {
+  const wojId = this.value
+  const miastoSelect = document.getElementById('miasto')
+  if (!wojId) { miastoSelect.innerHTML = '<option value="">— wybierz miasto —</option>'; miastoSelect.disabled=true; return }
+  const { data, error } = await supabase.from('miasta').select('id,nazwa').eq('wojewodztwo_id', wojId).order('nazwa')
+  if (error) return
+  miastoSelect.innerHTML = '<option value="">— wybierz miasto —</option>'
+  data.forEach(m => { const o=document.createElement('option'); o.value=m.id; o.textContent=m.nazwa; miastoSelect.appendChild(o)})
+  miastoSelect.disabled = false
 })
 
 document.getElementById('close-btn').addEventListener('click',()=>{ window.location.href='https://orep.pl/' })
 
-document.addEventListener('DOMContentLoaded', async ()=>{
-  const { data:{ user } } = await supabase.auth.getUser()
+// --- Podpięcie formularza ---
+document.addEventListener('DOMContentLoaded', async () => {
+  const { data: { user } } = await supabase.auth.getUser()
   if(!user) return window.location.href='/logowanie'
   currentUser=user
   email.value=user.email
+
   const { data } = await supabase.from('tabela_elektrykow').select('*').eq('email',user.email).single()
   if(data){
     document.getElementById('form-title').textContent='Aktualizacja danych'
     document.getElementById('submit-btn').textContent='Zapisz zmiany'
-    fields.forEach(f=>{ f!=='zajmujeSie' ? (data[f] && (document.getElementById(f).value=data[f])) : (data[f] && (document.getElementById(f).innerHTML=data[f])) })
+    fields.forEach(f => { if(f!=='zajmujeSie'){ data[f]&&(document.getElementById(f).value=data[f]) } else { data[f]&&(document.getElementById(f).innerHTML=data[f]) } })
     if(data.wojewodztwo) await loadWojewodztwa(data.wojewodztwo)
     if(data.miasto) document.getElementById('miasto').value=data.miasto
-    if(data.nrE){ nrEValidLabel.style.display='block'; nrEValidTo.style.display='block'; nrEValidTo.value=data.nrE_valid_to||'' }
-    if(data.nrEPomiary){ nrEPomiaryValidLabel.style.display='block'; nrEPomiaryValidTo.style.display='block'; nrEPomiaryValidTo.value=data.nrEPomiary_valid_to||'' }
-    if(data.nrD){ nrDValidLabel.style.display='block'; nrDValidTo.style.display='block'; nrDValidTo.value=data.nrD_valid_to||'' }
-  } else loadWojewodztwa()
+
+    if(data.nrE){ nrEValidLabel.style.display='block'; nrEValidTo.style.display='block'; nrEValidTo.value=data.nrE_valid_to||''}
+    if(data.nrEPomiary){ nrEPomiaryValidLabel.style.display='block'; nrEPomiaryValidTo.style.display='block'; nrEPomiaryValidTo.value=data.nrEPomiary_valid_to||''}
+    if(data.nrD){ nrDValidLabel.style.display='block'; nrDValidTo.style.display='block'; nrDValidTo.value=data.nrD_valid_to||''}
+  } else { loadWojewodztwa() }
 })
 
 document.getElementById('register-form').addEventListener('submit', async e=>{
   e.preventDefault()
   if(!currentUser){ result.textContent='Musisz być zalogowany'; result.className='error'; return }
   loading.style.display='block'; result.textContent=''; result.className=''
+
   if(nrE.value && nrEPomiary.value){ loading.style.display='none'; result.textContent='Wybierz tylko jeden rodzaj eksploatacji'; result.className='error'; return }
   if(nrD.value && !nrEPomiary.value){ loading.style.display='none'; result.textContent='Do DOZORU wymagane są pomiary'; result.className='error'; return }
 
-  const allowedTypes=['application/pdf','image/jpeg','image/png']
-  const maxSize=5*1024*1024
+  const allowedTypes=['application/pdf','image/jpeg','image/png'], maxSize=5*1024*1024
   let plikUrls=[]
   for(let i=0;i<plik.files.length;i++){
     const file=plik.files[i]
@@ -189,66 +306,41 @@ document.getElementById('register-form').addEventListener('submit', async e=>{
   }
 
   const payload={ email: currentUser.email }
-  payload.nre_valid_to=nrEValidTo.value||null
-  payload.nrepomiary_valid_to=nrEPomiaryValidTo.value||null
-  payload.nrd_valid_to=nrDValidTo.value||null
-  fields.forEach(f=>{ f!=='zajmujeSie' ? payload[f]=document.getElementById(f).value.trim() : payload[f]=document.getElementById(f).innerHTML.trim() })
-  if(plikUrls.length) payload.plik=plikUrls.join(',')
+  payload.nre_valid_to = nrEValidTo.value||null
+  payload.nrepomiary_valid_to = nrEPomiaryValidTo.value||null
+  payload.nrd_valid_to = nrDValidTo.value||null
+  fields.forEach(f=>{ if(f!=='zajmujeSie'){ payload[f]=document.getElementById(f).value.trim() } else { payload[f]=document.getElementById(f).innerHTML.trim() } })
+  if(plikUrls.length) payload.plik = plikUrls.join(',')
 
   const { data: existing } = await supabase.from('tabela_elektrykow').select('id').eq('email',currentUser.email).single()
   let error
-  if(existing){ const { error: e2 } = await supabase.from('tabela_elektrykow').update(payload).eq('id',existing.id); error=e2 }
-  else{ const { error: e3 } = await supabase.from('tabela_elektrykow').insert(payload); error=e3 }
+  if(existing){ const { error:e2 } = await supabase.from('tabela_elektrykow').update(payload).eq('id',existing.id); error=e2 } 
+  else { const { error:e3 } = await supabase.from('tabela_elektrykow').insert(payload); error=e3 }
+
   loading.style.display='none'
   if(error){ result.textContent=error.message; result.className='error'; return }
 
   try{
-    const res = await fetch('https://tfbqqduxtsacvwfigsvt.supabase.co/functions/v1/send_welcome_email',{
+    const res=await fetch('https://tfbqqduxtsacvwfigsvt.supabase.co/functions/v1/send_welcome_email',{
       method:'POST',
-      headers:{ 'Content-Type':'application/json','Authorization':'Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY2OTE4NzcsImV4cCI6MjA4MjI2Nzg3N30.PhuNnwzQ8cZW_UyUjCxXaYAj7xCCiTnOJVd4fUtQRD8' },
-      body:JSON.stringify({
+      headers:{ 'Content-Type':'application/json', 'Authorization':'Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY2OTE4NzcsImV4cCI6MjA4MjI2Nzg3N30.PhuNnwzQ8cZW_UyUjCxXaYAj7xCCiTnOJVd4fUtQRD8' },
+      body: JSON.stringify({
         email: currentUser.email,
         name: document.getElementById('imie').value,
         nazwisko: document.getElementById('nazwisko').value,
         telefon: document.getElementById('telefon').value,
-        email2: document.getElementById('email').value,
+        email: document.getElementById('email').value,
         nrE: document.getElementById('nrE').value,
         nrEPomiary: document.getElementById('nrEPomiary').value,
         nrD: document.getElementById('nrD').value
       })
     })
     if(!res.ok){ const err=await res.text(); throw new Error(err||'Błąd wysyłki emaila') }
-  }catch(err){ result.textContent='Nie udało się wysłać emaila powitalnego: '+err.message; result.className='error'; return }
+  }catch(e){ console.log('Mail error',e) }
 
-  window.location.href='https://orep.pl/logowanie'
+  result.textContent='Dane zapisane pomyślnie'
+  result.className=''
 })
-
-function formatText(command){ document.execCommand(command,false,null) }
-
-function addLink(){
-  const url=prompt("Wklej adres URL:");
-  if(url){
-    const selection=window.getSelection();
-    if(!selection.rangeCount) return;
-    const range=selection.getRangeAt(0);
-    const selectedText=range.toString()||url;
-    const a=document.createElement('a');
-    a.href=url; a.textContent=selectedText; a.target="_blank";
-    range.deleteContents(); range.insertNode(a);
-  }
-}
-
-const zajmujeSieInput=document.getElementById('zajmujeSie');
-zajmujeSieInput.addEventListener('input',()=>{
-  let value=zajmujeSieInput.innerHTML;
-  let digitsCount=0;
-  value=value.replace(/\d/g,(d)=>{ digitsCount++; return digitsCount>2?'':d });
-  const emailRegex=/[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-z]{2,}/gi;
-  value=value.replace(emailRegex,'');
-  const phoneRegex=/\+?\d[\d\s\-]{3,}/g;
-  value=value.replace(phoneRegex,'');
-  zajmujeSieInput.innerHTML=value;
-});
 </script>
 </body>
 </html>
